--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -61,6 +61,12 @@ ion-searchbar {
   --icon-color: var(--ion-color-accent);
 }
 
+ion-toggle {
+  --background-checked: var(--ion-color-accent-tint);
+  --handle-background: var(--ion-color-accent);
+  --handle-background-checked: var(--ion-color-accent);
+}
+
 ion-app.dark {
 
   ion-toolbar {
@@ -73,6 +79,10 @@ ion-app.dark {
 
   ion-content {
     --ion-background-color: var(--ion-color-dark-tint);
+  }
+
+  ion-toggle {
+    --background: var(--ion-color-dark-tint);
   }
 
   .contentDiv {
@@ -132,6 +142,10 @@ ion-app.light {
 
   ion-content {
     --ion-background-color: var(--ion-color-light);
+  }
+
+  ion-toggle {
+    --background: var(--ion-color-light);
   }
 
   .contentDiv {
