add route on map (to debug)

--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -4,8 +4,8 @@
     <ion-label>
       {{ title }}
     </ion-label>
-    <ion-button>Point de départ</ion-button>
-    <ion-button>Point d'arrivée</ion-button>
+    <ion-button (click)="setFromPoint()">Point de départ</ion-button>
+    <ion-button (click)="setToPoint()">Point d'arrivée</ion-button>
   </ion-toolbar>
 </ion-header>
 <ion-content>
