--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -107,7 +107,7 @@
       </ion-segment-button>
     </ion-segment>
 
-    <ion-button fill="clear">
+    <ion-button fill="clear" (click)="itinerary()">
       <ion-icon name="navigate-outline"></ion-icon>
       Go
     </ion-button>
