--- a/src/app/route/route.page.scss
+++ b/src/app/route/route.page.scss
@@ -16,24 +16,24 @@
       width:100%;
       }
    
-   .stopButton {
+   .stopBtn {
       border: solid 2px var(--ion-color-accent);
       border-radius: 0.5rem;
       width: 100%;
    }
 
-   .reverseButton {
-      color: var(--ion-color-accent-tint);
+   .reverseBtn {
+      position: absolute;
+      right: 1rem;
+      transform: translateY(-50%);
+      background-color: var(--ion-color-accent-tint);
       border: solid 2px var(--ion-color-accent-tint);
+      box-shadow: 0.1rem 0.1rem 0.5rem black;
       display: block;
       margin: auto;
       border-radius: 0.5rem;
-      width: 25%;
-      height: 2rem;
-
-      ion-icon {
-         color: var(--ion-color-accent-tint);
-      }
+      width: 20%;
+      height: 3rem;
    }
 }
 
@@ -59,7 +59,6 @@
 }
 
 .pmrAccessDiv {
-
    display: flex;
    
    ion-icon {
@@ -72,4 +71,8 @@
       margin: auto 1rem;
       font-size: medium;
    }
+}
+
+.footer {
+   display: flex;
 }
