--- a/src/app/route/route.page.scss
+++ b/src/app/route/route.page.scss
@@ -25,6 +25,7 @@
    .reverseBtn {
       position: absolute;
       right: 1rem;
+      z-index: 1;
       transform: translateY(-50%);
       background-color: var(--ion-color-accent-tint);
       border: solid 2px var(--ion-color-accent-tint);
