--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -59,6 +59,9 @@ ion-select {
 ion-searchbar {
   --placeholder-color: var(--ion-color-accent-tint);
   --icon-color: var(--ion-color-accent);
+  --border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  padding-right: 2.5rem;
 }
 
 ion-toggle {
@@ -79,6 +82,19 @@ ion-segment {
   }
 }
 
+ion-card {
+  border-radius: 0.5rem;
+
+  ion-item {
+    border-radius: 0.5rem;
+    margin: 1%;
+
+    ion-icon {
+        transform: rotate(90deg);
+    }
+  }
+}
+
 .footer {
   position: fixed;
   right: 0;
@@ -96,6 +112,13 @@ ion-segment {
        font-size: 1.5rem;
     }
   }
+}
+
+.closeBtn {
+  float: right;
+  margin: auto 0.5rem;
+  --background: var(--ion-color-accent);
+  border-radius: 0.5rem;
 }
 
 ion-app.dark {
@@ -121,6 +144,15 @@ ion-app.dark {
     color: var(--ion-color-light-shade);
   }
 
+  .closeBtn {
+    color: var(--ion-color-light);
+    box-shadow: 0.25rem 0.25rem 1rem black;
+
+    ion-icon {
+      color: var(--ion-color-light);
+    }
+  }
+
   .reverseBtn {
   
     ion-icon {
@@ -137,7 +169,7 @@ ion-app.dark {
   ion-card {
     box-shadow: 0.25rem 0.5rem 1rem black;
     
-    .lineName {
+    .name {
       color: white;
     }
 
@@ -164,6 +196,7 @@ ion-app.dark {
   ion-searchbar {
     background-color: var(--ion-color-dark);
     --background: var(--ion-color-dark-tint);
+    box-shadow: 0.25rem 0.25rem 1rem black;
   }
 
   .header {
@@ -211,6 +244,15 @@ ion-app.light {
     color: var(--ion-color-dark-tint);
   }
 
+  .closeBtn {
+    color: var(--ion-color-dark);
+    box-shadow: 0.25rem 0.25rem 1rem var(--ion-color-dark-tint);
+
+    ion-icon {
+      color: var(--ion-color-dark);
+    }
+  }
+
   .reverseBtn {
   
     ion-icon {
@@ -227,7 +269,7 @@ ion-app.light {
   ion-card {
     box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
     
-    .lineName {
+    .name {
       color: black;
     }
 
@@ -254,6 +296,7 @@ ion-app.light {
   ion-searchbar {
     background-color: var(--ion-color-light);
     --background: white;
+    box-shadow: 0.25rem 0.25rem 1rem var(--ion-color-dark-tint);
   }
 
   .header {
