set disabled image + add modal to route

--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -81,7 +81,7 @@
   </div>
 
   <div class="pmrAccessDiv">
-    <ion-icon name="fitness-outline"></ion-icon>
+    <img src="/assets/icon/disabled.png">
     <ion-label>Accès PMR</ion-label>
     <ion-toggle [(ngModel)]="PMRaccess"></ion-toggle>
   </div>
