--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -259,7 +259,7 @@ ion-app.light {
   ion-card {
     box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
     
-    .name {
+    .lineName {
       color: black;
     }
 
