--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -41,10 +41,7 @@
             <ion-text slot="end">{{ dateValue }}</ion-text>
             <ion-popover trigger="open-date-input-1" show-backdrop="false">
               <ng-template>
-                <ion-datetime
-                  #popoverDate
-                  presentation="date"
-                  (ionChange)="dateValue = formatDate(popoverDate.value)"
+                <ion-datetime #popoverDate presentation="date" (ionChange)="dateValue = formatDate(popoverDate.value)"
                 ></ion-datetime>
               </ng-template>
             </ion-popover>
@@ -67,10 +64,7 @@
             <ion-text slot="end">{{ timeValue }}</ion-text>
             <ion-popover trigger="open-time-input-2" show-backdrop="false" #popOverTime>
               <ng-template>
-                <ion-datetime
-                  #popoverTime
-                  presentation="time"
-                  (ionChange)="timeValue = formatTime(popoverTime.value)"
+                <ion-datetime #popoverTime presentation="time" (ionChange)="timeValue = formatTime(popoverTime.value)"
                 ></ion-datetime>
               </ng-template>
             </ion-popover>
