--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -97,6 +97,11 @@ ion-card {
   }
 }
 
+ion-progress-bar {
+  --background: var(--ion-color-light-shade);
+  --progress-background: var(--ion-color-accent-tint);
+}
+
 .footer {
   position: fixed;
   right: 0;
