--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -11,7 +11,7 @@
   <div id="map"></div>
 </ion-content>
 
-<div class="footer contentDiv">
+<div class="footer contentDiv" hidden>
   <ion-grid>
     <ion-row>
       <ion-col>
