--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -1,24 +1,20 @@
 <ion-header>
   <ion-toolbar>
     <br />
-    <ion-label>
+    <ion-title>
       {{ title }}
-    </ion-label>
+    </ion-title>
     <div *ngIf="routeButtons">
-      <ion-button (click)="setFromPoint()">Point de départ</ion-button>
-      <ion-button (click)="setToPoint()">Point d'arrivée</ion-button>
+      <ion-button (click)="setFromPoint()" fill="clear">Point de départ</ion-button>
+      <ion-button (click)="setToPoint()" fill="clear">Point d'arrivée</ion-button>
     </div>
     <div *ngIf="goToButton">
-      <ion-button (click)="goToMap()">Aller</ion-button>
+      <ion-button (click)="goToMap()" fill="clear">Aller</ion-button>
     </div>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-progress-bar
-    type="indeterminate"
-    *ngIf="schedules === undefined"
-  ></ion-progress-bar>
-  <div class="footer"></div>
+  <ion-progress-bar type="indeterminate" *ngIf="schedules === undefined" ></ion-progress-bar>
   <ion-list>
     <ion-item *ngFor="let schedule of schedules">
       <ion-label>
