--- a/src/app/route/route.page.scss
+++ b/src/app/route/route.page.scss
@@ -11,29 +11,28 @@
 
 .stopsDiv {
    
-   span{
-      text-align:left;
-      width:100%;
-      }
-   
-   .stopBtn {
+   ion-input {
+      color: var(--ion-color-accent);
       border: solid 2px var(--ion-color-accent);
       border-radius: 0.5rem;
       width: 100%;
+
+      &:first-child {
+         margin-bottom: 0.5rem;
+      }
    }
 
    .reverseBtn {
       position: absolute;
-      right: 1rem;
-      z-index: 1;
-      transform: translateY(-50%);
+      right: 2rem;
+      z-index: 3;
+      transform: translateY(-57%);
       background-color: var(--ion-color-accent-tint);
       border: solid 2px var(--ion-color-accent-tint);
       box-shadow: 0.1rem 0.1rem 0.5rem black;
       display: block;
       margin: auto;
       border-radius: 0.5rem;
-      width: 20%;
       height: 3rem;
    }
 }
@@ -78,8 +77,10 @@
    display: flex;
 
    .favoriteBtn {
-      margin: auto;
-      font-size: large;
+
+      ion-icon {
+         font-size: 2rem;
+      }
    }
 
    .goBtn {
