--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -153,7 +153,7 @@ ion-app.dark {
   
     ion-icon {
       color: var(--ion-color-light-shade);
-      font-size: larger;
+      font-size: 2rem;
     }
   }
 
