--- a/src/app/choice-stop/choice-stop.page.scss
+++ b/src/app/choice-stop/choice-stop.page.scss
@@ -7,6 +7,7 @@ div {
         text-align: left;
         margin: 0.5rem;
         border-radius: 0.5rem;
+        padding-right: 8px;
     }
 
     ion-button {
@@ -14,7 +15,11 @@ div {
     }
 }
 
-ion-label {
+ion-icon {
+    margin-right: 0.5rem;
+}
+
+h2 {
     font-size: large;
     font-weight: bold;
 }
