--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -9,11 +9,11 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-input placeholder="Départ" [(ngModel)]="depart" (click)="openModalDeparture()" class="stopButton" fill="clear"></ion-input>
+          <ion-input class="stopInput" placeholder="Départ" [(ngModel)]="depart" (click)="openModalDeparture()" fill="clear"></ion-input>
           <ion-button class="reverseButton" fill="clear" (click)="reverseStops()">
             <ion-icon name="swap-vertical"></ion-icon>
           </ion-button>
-          <ion-input placeholder="Arrivée" [(ngModel)]="arrivee" (click)="openModalArrival()" class="stopButton" fill="clear"></ion-input>
+          <ion-input class="stopInput" placeholder="Arrivée" [(ngModel)]="arrivee" (click)="openModalArrival()" fill="clear"></ion-input>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -21,7 +21,7 @@
 
   <div *ngIf="favoriteTrip">
     <ion-list>
-      <ion-item *ngFor="let trip of favoriteListTrip">
+      <ion-item *ngFor="let trip of favoriteListTrip" (click)="selectFavoriteTrip(trip)">
         <ion-label>{{ trip[0] }} -> {{ trip[1] }}</ion-label>
       </ion-item>
     </ion-list>
