--- a/src/app/route/route.page.scss
+++ b/src/app/route/route.page.scss
@@ -16,7 +16,7 @@
       width:100%;
       }
    
-   .stopBtn {
+   .stopInput {
       border: solid 2px var(--ion-color-accent);
       border-radius: 0.5rem;
       width: 100%;
