--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="dateTimeDiv">
-    <ion-label>Date & Heure</ion-label>
+    <ion-label class="dateTimeLabel">Date & Heure</ion-label>
     <ion-grid >
       <ion-row>
         <ion-col>
