--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -78,7 +78,7 @@
 
   <div class="footer">
 
-    <ion-button class="favoriteBtn" fill="clear" (click)="toggleFavorite()" >
+    <ion-button class="favoriteBtn" fill="clear" (click)="createFavorite()" >
       <ion-icon name="heart{{toggled ? '' : '-outline'}}"></ion-icon>
     </ion-button>
 
