--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -15,20 +15,20 @@
 </ion-header>
 <ion-content>
   <ion-progress-bar type="indeterminate" *ngIf="schedules === undefined" ></ion-progress-bar>
-  <ion-list>
-    <ion-item *ngFor="let schedule of schedules">
-      <ion-label style="background-color: rgb({{schedule.lineDescription.properties.COULEUR}}); color: rgb({{schedule.lineDescription.properties.COULEUR_TEXTE}})">
-        {{ schedule.pattern.id.split(":")[1] }}
-      </ion-label>
-      <ion-label size="small">
-        {{ schedule.pattern.desc }}
-      </ion-label>
-      <ion-label>
+  <ion-grid class="stopGrid">
+    <ion-row *ngFor="let schedule of schedules">
+      <ion-col class="letterLabel" style="background-color: rgb({{schedule.lineDescription.properties.COULEUR}}); color: rgb({{schedule.lineDescription.properties.COULEUR_TEXTE}})">
+        <ion-label>{{ schedule.pattern.id.split(":")[1] }}</ion-label>
+      </ion-col>
+      <ion-col size="small">
+        <ion-label>{{ schedule.pattern.desc }}</ion-label>
+      </ion-col>
+      <ion-col>
         <span *ngFor="let time of schedule.times">
           {{ renderTime(time.realtimeArrival) }}
           <br />
         </span>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
