--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -120,6 +120,21 @@ ion-progress-bar {
   border-radius: 0.5rem;
 }
 
+.stopGrid {
+  display: block;
+
+  ion-row {
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+
+    ion-col {
+      margin: auto 0.25rem;
+      text-align: center;
+      border-radius: 20px;
+    }
+  }
+}
+
 ion-app.dark {
 
   ion-toolbar {
@@ -162,6 +177,15 @@ ion-app.dark {
   
     &::part(text) {
       color: var(--ion-color-accent-tint);
+    }
+  }
+
+  .stopGrid {
+  
+    ion-row {
+      background-color: var(--ion-color-dark);
+      color: var(--ion-color-light);
+      box-shadow: 0.25rem 0.25rem 1rem black;
     }
   }
 
@@ -305,6 +329,15 @@ ion-app.light {
   
     &::part(text) {
       color: var(--ion-color-accent-light);
+    }
+  }
+
+  .stopGrid {
+  
+    ion-row {
+      background-color: var(--ion-color-light);
+      color: var(--ion-color-dark);
+      box-shadow: 0.25rem 0.25rem 1rem var(--ion-color-dark);
     }
   }
 
