--- a/src/app/stop/stop.component.html
+++ b/src/app/stop/stop.component.html
@@ -15,20 +15,18 @@
 </ion-header>
 <ion-content>
   <ion-progress-bar type="indeterminate" *ngIf="schedules === undefined" ></ion-progress-bar>
-  <ion-grid class="stopGrid">
-    <ion-row *ngFor="let schedule of schedules">
-      <ion-col class="letterLabel" style="background-color: rgb({{schedule.lineDescription.properties.COULEUR}}); color: rgb({{schedule.lineDescription.properties.COULEUR_TEXTE}})">
-        <ion-label>{{ schedule.pattern.id.split(":")[1] }}</ion-label>
-      </ion-col>
-      <ion-col size="small">
-        <ion-label>{{ schedule.pattern.desc }}</ion-label>
-      </ion-col>
-      <ion-col>
-        <span *ngFor="let time of schedule.times">
-          {{ renderTime(time.realtimeArrival) }}
-          <br />
-        </span>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class="stopDiv" *ngFor="let schedule of schedules">
+    <div style="background-color: rgb({{schedule.lineDescription.properties.COULEUR}}); color: rgb({{schedule.lineDescription.properties.COULEUR_TEXTE}})">
+      {{ schedule.pattern.id.split(":")[1] }}
+    </div>
+    <div>
+      {{ schedule.pattern.desc }}
+    </div>
+    <div>
+      <span *ngFor="let time of schedule.times">
+        {{ renderTime(time.realtimeArrival) }}
+        <br />
+      </span>
+    </div>
+  </div>
 </ion-content>
