--- a/src/app/detail-itinerary/detail-itinerary.page.html
+++ b/src/app/detail-itinerary/detail-itinerary.page.html
@@ -6,9 +6,9 @@
 
 <ion-content>
 
-  <ion-button class="btnClose" (click)="dismiss()" fill="clear">X</ion-button>
+  <ion-button class="closeBtn" (click)="dismiss()" fill="clear">X</ion-button>
   <ion-list>
-    <ion-item *ngFor="let step of itinerary" class="label">
+    <ion-item id="itinerary" *ngFor="let step of itinerary" class="label">
       {{ step }}
     </ion-item>
   </ion-list>
