--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -21,7 +21,7 @@
 
   <div *ngIf="favoriteTrip">
     <ion-list>
-      <ion-item *ngFor="let trip of favoriteListTrip" (click)="selectFavoriteTrip(trip)">
+      <ion-item id="itinerary" *ngFor="let trip of favoriteListTrip" (click)="selectFavoriteTrip(trip)">
         <ion-label>{{ trip[0] }} -> {{ trip[1] }}</ion-label>
       </ion-item>
     </ion-list>
@@ -75,6 +75,8 @@
     <ion-label>Accès PMR</ion-label>
     <ion-toggle [(ngModel)]="PMRaccess"></ion-toggle>
   </div>
+
+  <p style="height: 5rem;" ></p>
 
   <div class="footer">
 
